kubernetes/apps/webdev/games-manager/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: games-manager-frontend
    app.kubernetes.io/instance: games-manager-frontend
    app.kubernetes.io/name: games-manager-frontend
  name: games-manager-frontend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: games-manager-frontend
  template:
    metadata:
      labels:
        app: games-manager-frontend
        app.kubernetes.io/name: games-manager-frontend
    spec:
      nodeSelector:
        worker: "true"
      containers:
      - image: ghcr.io/fma965/games-manager-frontend:v1.0.2
        name: games-manager-frontend
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: games-manager-backend
    app.kubernetes.io/instance: games-manager-backend
    app.kubernetes.io/name: games-manager-backend
  name: games-manager-backend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: games-manager-backend
  template:
    metadata:
      labels:
        app: games-manager-backend
        app.kubernetes.io/name: games-manager-backend
    spec:
      nodeSelector:
        worker: "true"
      containers:
      - image: directus/directus:11
        name: games-manager-backend
