kubernetes/apps/webdev/games-manager/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: games-manager
  name: games-manager
spec:
  ports:
  - name: "frontend"
    port: 80
    targetPort: 80
  - name: "backend"
    port: 8055
    targetPort: 8055
  selector:
    app: games-manager
